# sea-orm-newtype-id

./: Cargo.toml  README.md
examples/: Cargo.toml
examples/src/: bin.rs
newtype_id/: Cargo.toml
newtype_id/src/: lib.rs
newtype_id_domain/: Cargo.toml
newtype_id_domain/src/: lib.rs
newtype_id_macros/: Cargo.toml
newtype_id_macros/src/: lib.rs
src/: lib.rs
