[package]
name = "sea-orm-newtype-id"
version = "0.1.0"
authors = ["Bradford Toney <bradford.toney@gmail.com>"]
description = "Sea-ORM newtyped IDs (stripe style)"

categories = ["database"]
keywords = ["sea-orm", "stripe", "id"]

[lib]
name = "sea_orm_newtype_id"
path = "src/lib.rs"

[dependencies]
nanoid = "0.4.0"
sea-orm = "0.10.0"
